# image-to-pdf

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  build_exe.py  build_exe.spec  pyproject.toml  run.py
.github/workflows/: ci.yml
image_to_pdf/: __init__.py  __main__.py  app.py  config_manager.py  gui.py  image_scanner.py  logger.py  pdf_converter.py  settings.py  settings_dialog.py
tests/: __init__.py  test_config_manager.py  test_image_scanner.py
